# fusion

./: .coveragerc  .flake8  README.md  pyproject.toml
core/: admin.py  forms.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_alter_funcionario_imagem.py  0003_recurso.py
core/templates/: 404.html  500.html  base.html  contact.html  features.html  hero.html  index.html  pricing.html  services.html  team.html
core/tests/: test_forms.py  test_models.py  test_views.py
fusion/: settings.py  urls.py
