[tool.poetry]
name = "fusion"
version = "0.1.0"
description = ""
authors = ["Rodrigo <rousuy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
psycopg2-binary = "^2.8.6"
gunicorn = "^20.1.0"
dj-static = "^0.0.6"
django-stdimage = "^5.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
